Kaggle Notebook | Generalization, Pruning and Cross-Validation | Version 4

--- a/07. Generalization, Pruning and Cross-Validation.ipynb
+++ b/07. Generalization, Pruning and Cross-Validation.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "918a8c01",
+   "id": "84612c86",
    "metadata": {
     "papermill": {
-     "duration": 0.005876,
-     "end_time": "2025-09-24T15:58:14.128252",
+     "duration": 0.003601,
+     "end_time": "2025-10-02T05:45:24.030983",
      "exception": false,
-     "start_time": "2025-09-24T15:58:14.122376",
+     "start_time": "2025-10-02T05:45:24.027382",
      "status": "completed"
     },
     "tags": []
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f21b13",
+   "id": "2713bd1f",
    "metadata": {
     "papermill": {
-     "duration": 0.003746,
-     "end_time": "2025-09-24T15:58:14.136595",
+     "duration": 0.002617,
+     "end_time": "2025-10-02T05:45:24.036875",
      "exception": false,
-     "start_time": "2025-09-24T15:58:14.132849",
+     "start_time": "2025-10-02T05:45:24.034258",
      "status": "completed"
     },
     "tags": []
@@ -37,33 +37,31 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "093e30f9",
+   "id": "927858ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:58:14.145296Z",
-     "iopub.status.busy": "2025-09-24T15:58:14.144987Z",
-     "iopub.status.idle": "2025-09-24T15:58:21.403802Z",
-     "shell.execute_reply": "2025-09-24T15:58:21.402676Z"
+     "iopub.execute_input": "2025-10-02T05:45:24.043988Z",
+     "iopub.status.busy": "2025-10-02T05:45:24.043647Z",
+     "iopub.status.idle": "2025-10-02T05:45:31.495719Z",
+     "shell.execute_reply": "2025-10-02T05:45:31.494603Z"
     },
     "papermill": {
-     "duration": 7.264189,
-     "end_time": "2025-09-24T15:58:21.405324",
+     "duration": 7.457673,
+     "end_time": "2025-10-02T05:45:31.497369",
      "exception": false,
-     "start_time": "2025-09-24T15:58:14.141135",
+     "start_time": "2025-10-02T05:45:24.039696",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x7b1454f6e330>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
     }
    ],
    "source": [
@@ -77,18 +75,22 @@
     "import torch.optim as optim\n",
     "\n",
     "np.random.seed(42)\n",
-    "torch.manual_seed(42)"
+    "torch.manual_seed(42)\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b5b6dd96",
+   "id": "0a01f5dd",
    "metadata": {
     "papermill": {
-     "duration": 0.002755,
-     "end_time": "2025-09-24T15:58:21.411439",
+     "duration": 0.002695,
+     "end_time": "2025-10-02T05:45:31.503324",
      "exception": false,
-     "start_time": "2025-09-24T15:58:21.408684",
+     "start_time": "2025-10-02T05:45:31.500629",
      "status": "completed"
     },
     "tags": []
@@ -100,24 +102,33 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ed13dc3",
+   "id": "5ca7c1aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:58:21.418595Z",
-     "iopub.status.busy": "2025-09-24T15:58:21.418199Z",
-     "iopub.status.idle": "2025-09-24T15:58:21.476810Z",
-     "shell.execute_reply": "2025-09-24T15:58:21.475813Z"
+     "iopub.execute_input": "2025-10-02T05:45:31.510705Z",
+     "iopub.status.busy": "2025-10-02T05:45:31.510215Z",
+     "iopub.status.idle": "2025-10-02T05:45:31.562710Z",
+     "shell.execute_reply": "2025-10-02T05:45:31.561583Z"
     },
     "papermill": {
-     "duration": 0.06407,
-     "end_time": "2025-09-24T15:58:21.478482",
+     "duration": 0.058081,
+     "end_time": "2025-10-02T05:45:31.564291",
      "exception": false,
-     "start_time": "2025-09-24T15:58:21.414412",
+     "start_time": "2025-10-02T05:45:31.506210",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "X, y = make_moons(n_samples=500, noise=0.2, random_state=42)\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -125,18 +136,22 @@
     "X_train_t = torch.tensor(X_train, dtype=torch.float32)\n",
     "y_train_t = torch.tensor(y_train, dtype=torch.long)\n",
     "X_val_t   = torch.tensor(X_val, dtype=torch.float32)\n",
-    "y_val_t   = torch.tensor(y_val, dtype=torch.long)"
+    "y_val_t   = torch.tensor(y_val, dtype=torch.long)\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c15230e0",
+   "id": "7b1d98ae",
    "metadata": {
     "papermill": {
-     "duration": 0.002856,
-     "end_time": "2025-09-24T15:58:21.484619",
+     "duration": 0.005281,
+     "end_time": "2025-10-02T05:45:31.572782",
      "exception": false,
-     "start_time": "2025-09-24T15:58:21.481763",
+     "start_time": "2025-10-02T05:45:31.567501",
      "status": "completed"
     },
     "tags": []
@@ -148,19 +163,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4fa86b11",
+   "id": "0eb25ed9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:58:21.491909Z",
-     "iopub.status.busy": "2025-09-24T15:58:21.491569Z",
-     "iopub.status.idle": "2025-09-24T15:58:29.487629Z",
-     "shell.execute_reply": "2025-09-24T15:58:29.486507Z"
+     "iopub.execute_input": "2025-10-02T05:45:31.580357Z",
+     "iopub.status.busy": "2025-10-02T05:45:31.580029Z",
+     "iopub.status.idle": "2025-10-02T05:45:39.698284Z",
+     "shell.execute_reply": "2025-10-02T05:45:39.697111Z"
     },
     "papermill": {
-     "duration": 8.001582,
-     "end_time": "2025-09-24T15:58:29.489272",
+     "duration": 8.124378,
+     "end_time": "2025-10-02T05:45:39.700244",
      "exception": false,
-     "start_time": "2025-09-24T15:58:21.487690",
+     "start_time": "2025-10-02T05:45:31.575866",
      "status": "completed"
     },
     "tags": []
@@ -170,6 +185,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "Fold 1: final val acc=0.970\n",
       "Fold 2: final val acc=0.980\n",
       "Fold 3: final val acc=0.980\n",
@@ -212,6 +229,10 @@
     "            val_accs.append(acc)\n",
     "    return train_losses, val_accs\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "cv_accs = []\n",
     "for fold,(tr,val) in enumerate(kf.split(X,y)):\n",
@@ -226,13 +247,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427bbfd0",
+   "id": "8aedb20e",
    "metadata": {
     "papermill": {
-     "duration": 0.003114,
-     "end_time": "2025-09-24T15:58:29.495931",
+     "duration": 0.003185,
+     "end_time": "2025-10-02T05:45:39.707103",
      "exception": false,
-     "start_time": "2025-09-24T15:58:29.492817",
+     "start_time": "2025-10-02T05:45:39.703918",
      "status": "completed"
     },
     "tags": []
@@ -244,19 +265,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f1c2e9a7",
+   "id": "8439587c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:58:29.503898Z",
-     "iopub.status.busy": "2025-09-24T15:58:29.503312Z",
-     "iopub.status.idle": "2025-09-24T15:58:30.264649Z",
-     "shell.execute_reply": "2025-09-24T15:58:30.263773Z"
+     "iopub.execute_input": "2025-10-02T05:45:39.715296Z",
+     "iopub.status.busy": "2025-10-02T05:45:39.714827Z",
+     "iopub.status.idle": "2025-10-02T05:45:40.520636Z",
+     "shell.execute_reply": "2025-10-02T05:45:40.519620Z"
     },
     "papermill": {
-     "duration": 0.76721,
-     "end_time": "2025-09-24T15:58:30.266360",
+     "duration": 0.81196,
+     "end_time": "2025-10-02T05:45:40.522454",
      "exception": false,
-     "start_time": "2025-09-24T15:58:29.499150",
+     "start_time": "2025-10-02T05:45:39.710494",
      "status": "completed"
     },
     "tags": []
@@ -266,7 +287,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Q2: Final validation acc with dropout: 0.88\n"
+      "Q2: Final validation acc with dropout: 0.88\n",
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
      ]
     }
    ],
@@ -274,6 +297,10 @@
     "drop_model = SimpleMLP(dropout=0.3)\n",
     "train_loss, val_acc = train_eval(drop_model, X_train_t,y_train_t,X_val_t,y_val_t,epochs=200)\n",
     "print(\"Q2: Final validation acc with dropout:\", val_acc[-1])\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "plt.figure()\n",
     "plt.plot(val_acc,label=\"Dropout=0.3\")\n",
@@ -285,13 +312,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01876dae",
+   "id": "70d5349f",
    "metadata": {
     "papermill": {
-     "duration": 0.003047,
-     "end_time": "2025-09-24T15:58:30.273069",
+     "duration": 0.00355,
+     "end_time": "2025-10-02T05:45:40.529545",
      "exception": false,
-     "start_time": "2025-09-24T15:58:30.270022",
+     "start_time": "2025-10-02T05:45:40.525995",
      "status": "completed"
     },
     "tags": []
@@ -303,19 +330,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7e3cd88b",
+   "id": "9033f998",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:58:30.281377Z",
-     "iopub.status.busy": "2025-09-24T15:58:30.280404Z",
-     "iopub.status.idle": "2025-09-24T15:58:30.958426Z",
-     "shell.execute_reply": "2025-09-24T15:58:30.957198Z"
+     "iopub.execute_input": "2025-10-02T05:45:40.538150Z",
+     "iopub.status.busy": "2025-10-02T05:45:40.537451Z",
+     "iopub.status.idle": "2025-10-02T05:45:41.266218Z",
+     "shell.execute_reply": "2025-10-02T05:45:41.265145Z"
     },
     "papermill": {
-     "duration": 0.683656,
-     "end_time": "2025-09-24T15:58:30.960047",
+     "duration": 0.734862,
+     "end_time": "2025-10-02T05:45:41.267965",
      "exception": false,
-     "start_time": "2025-09-24T15:58:30.276391",
+     "start_time": "2025-10-02T05:45:40.533103",
      "status": "completed"
     },
     "tags": []
@@ -326,6 +353,8 @@
      "output_type": "stream",
      "text": [
       "Before pruning val acc: 0.96\n",
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "After pruning + retrain val acc: 0.99\n"
      ]
     }
@@ -334,6 +363,10 @@
     "prune_model = SimpleMLP()\n",
     "_ , base_acc = train_eval(prune_model,X_train_t,y_train_t,X_val_t,y_val_t,epochs=200)\n",
     "print(\"Before pruning val acc:\", base_acc[-1])\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "# prune small weights\n",
     "with torch.no_grad():\n",
@@ -347,13 +380,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "131dc0ad",
+   "id": "c30f40dd",
    "metadata": {
     "papermill": {
-     "duration": 0.003198,
-     "end_time": "2025-09-24T15:58:30.966883",
+     "duration": 0.003222,
+     "end_time": "2025-10-02T05:45:41.275048",
      "exception": false,
-     "start_time": "2025-09-24T15:58:30.963685",
+     "start_time": "2025-10-02T05:45:41.271826",
      "status": "completed"
     },
     "tags": []
@@ -365,19 +398,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0d841c84",
+   "id": "f02e955e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:58:30.975843Z",
-     "iopub.status.busy": "2025-09-24T15:58:30.975492Z",
-     "iopub.status.idle": "2025-09-24T15:58:31.268111Z",
-     "shell.execute_reply": "2025-09-24T15:58:31.267095Z"
+     "iopub.execute_input": "2025-10-02T05:45:41.284144Z",
+     "iopub.status.busy": "2025-10-02T05:45:41.283832Z",
+     "iopub.status.idle": "2025-10-02T05:45:41.588812Z",
+     "shell.execute_reply": "2025-10-02T05:45:41.587424Z"
     },
     "papermill": {
-     "duration": 0.298777,
-     "end_time": "2025-09-24T15:58:31.269946",
+     "duration": 0.311181,
+     "end_time": "2025-10-02T05:45:41.590601",
      "exception": false,
-     "start_time": "2025-09-24T15:58:30.971169",
+     "start_time": "2025-10-02T05:45:41.279420",
      "status": "completed"
     },
     "tags": []
@@ -387,7 +420,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Early stopping at epoch 30, best val acc=0.870\n"
+      "Early stopping at epoch 30, best val acc=0.870\n",
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
      ]
     }
    ],
@@ -414,6 +449,10 @@
     "        if counter >= patience:\n",
     "            print(f\"Early stopping at epoch {ep}, best val acc={best_acc:.3f}\")\n",
     "            break\n",
+    "            \n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "plt.figure()\n",
     "plt.plot(history)\n",
@@ -424,13 +463,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e6dff99",
+   "id": "f758fe5b",
    "metadata": {
     "papermill": {
-     "duration": 0.003247,
-     "end_time": "2025-09-24T15:58:31.276798",
+     "duration": 0.003446,
+     "end_time": "2025-10-02T05:45:41.597723",
      "exception": false,
-     "start_time": "2025-09-24T15:58:31.273551",
+     "start_time": "2025-10-02T05:45:41.594277",
      "status": "completed"
     },
     "tags": []
@@ -442,19 +481,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ad3e92bc",
+   "id": "6a2e8872",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T15:58:31.284904Z",
-     "iopub.status.busy": "2025-09-24T15:58:31.284563Z",
-     "iopub.status.idle": "2025-09-24T15:58:33.628890Z",
-     "shell.execute_reply": "2025-09-24T15:58:33.627715Z"
+     "iopub.execute_input": "2025-10-02T05:45:41.605965Z",
+     "iopub.status.busy": "2025-10-02T05:45:41.605608Z",
+     "iopub.status.idle": "2025-10-02T05:45:44.166471Z",
+     "shell.execute_reply": "2025-10-02T05:45:44.165435Z"
     },
     "papermill": {
-     "duration": 2.350377,
-     "end_time": "2025-09-24T15:58:33.630622",
+     "duration": 2.567141,
+     "end_time": "2025-10-02T05:45:44.168364",
      "exception": false,
-     "start_time": "2025-09-24T15:58:31.280245",
+     "start_time": "2025-10-02T05:45:41.601223",
      "status": "completed"
     },
     "tags": []
@@ -465,6 +504,8 @@
      "output_type": "stream",
      "text": [
       "Q5 Results: Train accs: [0.865, 0.98, 0.9875, 0.99]\n",
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "Q5 Results: Val accs: [0.86, 0.98, 0.98, 0.98]\n"
      ]
     }
@@ -491,6 +532,11 @@
     "plt.savefig(\"lab7_q5_overfitting.png\",dpi=150,bbox_inches=\"tight\"); plt.close()\n",
     "\n",
     "print(\"Q5 Results: Train accs:\", train_accs)\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "print(\"Q5 Results: Val accs:\", val_accs)"
    ]
   }
@@ -524,14 +570,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 27.668315,
-   "end_time": "2025-09-24T15:58:36.404796",
+   "duration": 28.830299,
+   "end_time": "2025-10-02T05:45:47.034693",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-09-24T15:58:08.736481",
+   "start_time": "2025-10-02T05:45:18.204394",
    "version": "2.6.0"
   }
  },
