Kaggle Notebook | Self-Organizing Maps (SOM) | Version 2

--- a/08. Self-Organizing Maps (SOM).ipynb
+++ b/08. Self-Organizing Maps (SOM).ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9832b3ae",
+   "id": "7cd0b85f",
    "metadata": {
     "papermill": {
-     "duration": 0.003206,
-     "end_time": "2025-09-24T16:28:19.076748",
+     "duration": 0.00322,
+     "end_time": "2025-10-02T05:50:21.117980",
      "exception": false,
-     "start_time": "2025-09-24T16:28:19.073542",
+     "start_time": "2025-10-02T05:50:21.114760",
      "status": "completed"
     },
     "tags": []
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e752e84d",
+   "id": "8b65b14a",
    "metadata": {
     "papermill": {
-     "duration": 0.002442,
-     "end_time": "2025-09-24T16:28:19.082321",
+     "duration": 0.002316,
+     "end_time": "2025-10-02T05:50:21.123324",
      "exception": false,
-     "start_time": "2025-09-24T16:28:19.079879",
+     "start_time": "2025-10-02T05:50:21.121008",
      "status": "completed"
     },
     "tags": []
@@ -37,24 +37,33 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aebd6051",
+   "id": "f655451a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T16:28:19.088940Z",
-     "iopub.status.busy": "2025-09-24T16:28:19.088621Z",
-     "iopub.status.idle": "2025-09-24T16:28:31.615549Z",
-     "shell.execute_reply": "2025-09-24T16:28:31.614516Z"
+     "iopub.execute_input": "2025-10-02T05:50:21.129793Z",
+     "iopub.status.busy": "2025-10-02T05:50:21.129392Z",
+     "iopub.status.idle": "2025-10-02T05:50:35.633307Z",
+     "shell.execute_reply": "2025-10-02T05:50:35.632243Z"
     },
     "papermill": {
-     "duration": 12.532589,
-     "end_time": "2025-09-24T16:28:31.617533",
+     "duration": 14.50928,
+     "end_time": "2025-10-02T05:50:35.635191",
      "exception": false,
-     "start_time": "2025-09-24T16:28:19.084944",
+     "start_time": "2025-10-02T05:50:21.125911",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -65,18 +74,22 @@
     "import torch\n",
     "from torchvision import datasets, transforms\n",
     "\n",
-    "np.random.seed(42)"
+    "np.random.seed(42)\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "38473bba",
+   "id": "b3a4740e",
    "metadata": {
     "papermill": {
-     "duration": 0.002656,
-     "end_time": "2025-09-24T16:28:31.623165",
+     "duration": 0.002646,
+     "end_time": "2025-10-02T05:50:35.641008",
      "exception": false,
-     "start_time": "2025-09-24T16:28:31.620509",
+     "start_time": "2025-10-02T05:50:35.638362",
      "status": "completed"
     },
     "tags": []
@@ -88,24 +101,33 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "879939e3",
+   "id": "bbda4fd4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T16:28:31.630090Z",
-     "iopub.status.busy": "2025-09-24T16:28:31.629597Z",
-     "iopub.status.idle": "2025-09-24T16:28:31.923952Z",
-     "shell.execute_reply": "2025-09-24T16:28:31.923031Z"
+     "iopub.execute_input": "2025-10-02T05:50:35.648230Z",
+     "iopub.status.busy": "2025-10-02T05:50:35.647624Z",
+     "iopub.status.idle": "2025-10-02T05:50:35.963019Z",
+     "shell.execute_reply": "2025-10-02T05:50:35.961936Z"
     },
     "papermill": {
-     "duration": 0.299919,
-     "end_time": "2025-09-24T16:28:31.925787",
+     "duration": 0.32084,
+     "end_time": "2025-10-02T05:50:35.964549",
      "exception": false,
-     "start_time": "2025-09-24T16:28:31.625868",
+     "start_time": "2025-10-02T05:50:35.643709",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "class SOM1D:\n",
     "    def __init__(self, num_neurons=8, dim=3, lr=0.5, sigma=1.0, epochs=100):\n",
@@ -140,18 +162,22 @@
     "for i,w in enumerate(som1d.weights):\n",
     "    plt.scatter(i,0,c=w.reshape(1,-1),s=500)\n",
     "plt.axis(\"off\")\n",
-    "plt.savefig(\"lab8_q1_som1d_colors.png\",dpi=150,bbox_inches=\"tight\"); plt.close()"
+    "plt.savefig(\"lab8_q1_som1d_colors.png\",dpi=150,bbox_inches=\"tight\"); plt.close()\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "072ae4be",
+   "id": "2881d8dd",
    "metadata": {
     "papermill": {
-     "duration": 0.00237,
-     "end_time": "2025-09-24T16:28:31.931001",
+     "duration": 0.002635,
+     "end_time": "2025-10-02T05:50:35.970125",
      "exception": false,
-     "start_time": "2025-09-24T16:28:31.928631",
+     "start_time": "2025-10-02T05:50:35.967490",
      "status": "completed"
     },
     "tags": []
@@ -163,24 +189,33 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5cac6a02",
+   "id": "d5e68a29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T16:28:31.937420Z",
-     "iopub.status.busy": "2025-09-24T16:28:31.937102Z",
-     "iopub.status.idle": "2025-09-24T16:28:43.176134Z",
-     "shell.execute_reply": "2025-09-24T16:28:43.175191Z"
+     "iopub.execute_input": "2025-10-02T05:50:35.977133Z",
+     "iopub.status.busy": "2025-10-02T05:50:35.976799Z",
+     "iopub.status.idle": "2025-10-02T05:50:46.231101Z",
+     "shell.execute_reply": "2025-10-02T05:50:46.230007Z"
     },
     "papermill": {
-     "duration": 11.244453,
-     "end_time": "2025-09-24T16:28:43.178036",
+     "duration": 10.259839,
+     "end_time": "2025-10-02T05:50:46.232897",
      "exception": false,
-     "start_time": "2025-09-24T16:28:31.933583",
+     "start_time": "2025-10-02T05:50:35.973058",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "class SOM2D:\n",
     "    def __init__(self, m=10, n=10, dim=64, lr=0.5, sigma=None, epochs=100):\n",
@@ -205,6 +240,10 @@
     "                h = h.reshape(-1,1)\n",
     "                self.weights += self.lr * h * (x - self.weights)\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "# Use sklearn digits (8x8 subset of MNIST for speed)\n",
     "digits = load_digits()\n",
     "X_digits = MinMaxScaler().fit_transform(digits.data)\n",
@@ -216,13 +255,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86931e4b",
+   "id": "492c1d94",
    "metadata": {
     "papermill": {
-     "duration": 0.002496,
-     "end_time": "2025-09-24T16:28:43.183586",
+     "duration": 0.002834,
+     "end_time": "2025-10-02T05:50:46.239810",
      "exception": false,
-     "start_time": "2025-09-24T16:28:43.181090",
+     "start_time": "2025-10-02T05:50:46.236976",
      "status": "completed"
     },
     "tags": []
@@ -234,24 +273,33 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "046149c7",
+   "id": "f04429a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T16:28:43.190364Z",
-     "iopub.status.busy": "2025-09-24T16:28:43.189927Z",
-     "iopub.status.idle": "2025-09-24T16:28:43.552114Z",
-     "shell.execute_reply": "2025-09-24T16:28:43.551328Z"
+     "iopub.execute_input": "2025-10-02T05:50:46.248417Z",
+     "iopub.status.busy": "2025-10-02T05:50:46.247563Z",
+     "iopub.status.idle": "2025-10-02T05:50:46.648908Z",
+     "shell.execute_reply": "2025-10-02T05:50:46.647773Z"
     },
     "papermill": {
-     "duration": 0.367675,
-     "end_time": "2025-09-24T16:28:43.553880",
+     "duration": 0.407655,
+     "end_time": "2025-10-02T05:50:46.650597",
      "exception": false,
-     "start_time": "2025-09-24T16:28:43.186205",
+     "start_time": "2025-10-02T05:50:46.242942",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "def u_matrix(som, m, n):\n",
     "    W = som.weights.reshape(m,n,-1)\n",
@@ -266,6 +314,10 @@
     "            U[i,j] = d/cnt\n",
     "    return U\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "U = u_matrix(som2d,10,10)\n",
     "plt.imshow(U,cmap=\"bone\")\n",
     "plt.title(\"Q3: SOM U-Matrix\")\n",
@@ -275,13 +327,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90f02c9c",
+   "id": "d66301d0",
    "metadata": {
     "papermill": {
-     "duration": 0.00248,
-     "end_time": "2025-09-24T16:28:43.559239",
+     "duration": 0.003069,
+     "end_time": "2025-10-02T05:50:46.657365",
      "exception": false,
-     "start_time": "2025-09-24T16:28:43.556759",
+     "start_time": "2025-10-02T05:50:46.654296",
      "status": "completed"
     },
     "tags": []
@@ -293,24 +345,32 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2338f73f",
+   "id": "184ba6f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T16:28:43.565697Z",
-     "iopub.status.busy": "2025-09-24T16:28:43.565375Z",
-     "iopub.status.idle": "2025-09-24T16:28:53.957580Z",
-     "shell.execute_reply": "2025-09-24T16:28:53.956123Z"
+     "iopub.execute_input": "2025-10-02T05:50:46.665181Z",
+     "iopub.status.busy": "2025-10-02T05:50:46.664842Z",
+     "iopub.status.idle": "2025-10-02T05:50:57.795517Z",
+     "shell.execute_reply": "2025-10-02T05:50:57.794507Z"
     },
     "papermill": {
-     "duration": 10.397978,
-     "end_time": "2025-09-24T16:28:53.959792",
+     "duration": 11.136812,
+     "end_time": "2025-10-02T05:50:57.797211",
      "exception": false,
-     "start_time": "2025-09-24T16:28:43.561814",
+     "start_time": "2025-10-02T05:50:46.660399",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -333,6 +393,10 @@
     "labels_som = np.argmin(((X_img[:,None,:]-som_img.weights[None,:,:])**2).sum(-1),axis=1)\n",
     "seg_som = som_img.weights[labels_som].reshape(img.shape)\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "# KMeans clustering\n",
     "km = KMeans(n_clusters=8, random_state=42).fit(X_img)\n",
     "seg_km = km.cluster_centers_[km.labels_].reshape(img.shape)\n",
@@ -347,13 +411,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "814ee880",
+   "id": "9b98b380",
    "metadata": {
     "papermill": {
-     "duration": 0.003302,
-     "end_time": "2025-09-24T16:28:53.966904",
+     "duration": 0.002763,
+     "end_time": "2025-10-02T05:50:57.803104",
      "exception": false,
-     "start_time": "2025-09-24T16:28:53.963602",
+     "start_time": "2025-10-02T05:50:57.800341",
      "status": "completed"
     },
     "tags": []
@@ -365,19 +429,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d64f2687",
+   "id": "87ca0472",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T16:28:53.974245Z",
-     "iopub.status.busy": "2025-09-24T16:28:53.973785Z",
-     "iopub.status.idle": "2025-09-24T16:28:54.594420Z",
-     "shell.execute_reply": "2025-09-24T16:28:54.593484Z"
+     "iopub.execute_input": "2025-10-02T05:50:57.810733Z",
+     "iopub.status.busy": "2025-10-02T05:50:57.810215Z",
+     "iopub.status.idle": "2025-10-02T05:50:58.475573Z",
+     "shell.execute_reply": "2025-10-02T05:50:58.474366Z"
     },
     "papermill": {
-     "duration": 0.625862,
-     "end_time": "2025-09-24T16:28:54.596001",
+     "duration": 0.671334,
+     "end_time": "2025-10-02T05:50:58.477418",
      "exception": false,
-     "start_time": "2025-09-24T16:28:53.970139",
+     "start_time": "2025-10-02T05:50:57.806084",
      "status": "completed"
     },
     "tags": []
@@ -387,11 +451,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "Q5: LVQ training accuracy: 0.9120756816917084\n"
      ]
     }
    ],
    "source": [
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "class LVQ:\n",
     "    def __init__(self, prototypes_per_class=1, lr=0.1, epochs=10):\n",
     "        self.prototypes_per_class = prototypes_per_class\n",
@@ -461,14 +531,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 43.685924,
-   "end_time": "2025-09-24T16:28:57.414446",
+   "duration": 45.741405,
+   "end_time": "2025-10-02T05:51:01.315841",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-09-24T16:28:13.728522",
+   "start_time": "2025-10-02T05:50:15.574436",
    "version": "2.6.0"
   }
  },
